examples/bad/ERROR_UNEXPECTED_SUBTYPE/bot.st
language core;

extend with #natural-literals,
            #top-type,
            #bottom-type,
            #structural-subtyping;

fn main(b : Bool) -> Bot {
    return 1
}

//ERROR_UNEXPECTED_SUBTYPE
